--- a/_GitBook/_unused_template.tex
+++ b/_GitBook/_unused_template.tex
@@ -16,9 +16,9 @@
   \usepackage{fontspec}
   \defaultfontfeatures{Ligatures=TeX} % To support LaTeX quoting style
  \defaultfontfeatures{Ligatures=TeX}
- \setmainfont{Minion Pro}
- \setsansfont[Scale=MatchLowercase]{Myriad Pro}
- \setmonofont[Scale=MatchLowercase]{Ubuntu Mono}
+ \setmainfont{Calibri}
+ \setsansfont[Scale=MatchLowercase]{Calibri}
+ \setmonofont[Scale=MatchLowercase]{Fira Code}
 \else
   \usepackage[T1]{fontenc}
   \usepackage[utf8]{inputenc}
