--- a/_GitBook/preamble.tex
+++ b/_GitBook/preamble.tex
@@ -1,1 +1,40 @@
 \usepackage{booktabs}
+
+\usepackage[a4paper,text={16.5cm,25.2cm},centering,margin=2.6cm]{geometry}
+% \usepackage[left=1.0in,top=1.0in,right=1.0in,bottom=1.0in]{geometry}
+\usepackage{hyperref,amsmath,amssymb,bm,url,enumitem,dcolumn,upquote,framed,alltt,textgreek,xfrac,fixltx2e}
+\usepackage[australian]{babel}
+\usepackage[compact,small]{titlesec}
+
+\usepackage{ifxetex}
+\ifxetex
+ \usepackage{fontspec}
+ \defaultfontfeatures{Ligatures=TeX} % To support LaTeX quoting style
+ \defaultfontfeatures{Ligatures=TeX}
+ \setmainfont{Calibri}
+ \setsansfont[Scale=MatchLowercase]{Calibri}
+ \setmonofont[Scale=0.75]{Fira Code}
+\else
+  \usepackage[T1]{fontenc}
+  \usepackage[utf8]{inputenc}
+  \usepackage{lmodern}
+  \usepackage[full]{textcomp} % directly use the degree (and some other) symbol
+\fi
+
+% place after fonts; even better typesetting for improved readability:
+% \graphicspath{ {figure/} }
+\usepackage{tabularx} % for 'tabularx' environment and 'X' column type
+\usepackage{ragged2e}  % for '\RaggedRight' macro (allows hyphenation)
+\usepackage{siunitx}
+    \sisetup{%
+        detect-mode,
+        group-digits            = false,
+        input-symbols           = ( ) [ ] - + < > *,
+        table-align-text-post   = false,
+        round-mode              = places,
+        round-precision         = 3
+        }
+% \usepackage[font={small, sf}, labelfont=bf]{caption} % tweaking the captions
+\usepackage[font={small}, labelfont=bf]{caption} % tweaking the captions
+\usepackage[color=yellow, textsize=tiny]{todonotes}
+\frenchspacing%
