--- a/_GitBook/preamble.tex
+++ b/_GitBook/preamble.tex
@@ -5,6 +5,7 @@
 \usepackage{hyperref,amsmath,amssymb,bm,url,enumitem,dcolumn,upquote,framed,alltt,textgreek,xfrac,fixltx2e}
 \usepackage[australian]{babel}
 \usepackage[compact,small]{titlesec}
+\usepackage{xcolor}
 
 \usepackage{ifxetex}
 \ifxetex
@@ -13,7 +14,7 @@
  \defaultfontfeatures{Ligatures=TeX}
  \setmainfont{Calibri}
  \setsansfont[Scale=MatchLowercase]{Calibri}
- \setmonofont[Scale=0.75]{Fira Code}
+ \setmonofont[Scale=0.75,Color=blue]{Fira Code}
 \else
   \usepackage[T1]{fontenc}
   \usepackage[utf8]{inputenc}
