--- a/docs/Intro_R_Workshop.tex
+++ b/docs/Intro_R_Workshop.tex
@@ -504,8 +504,8 @@ Early on, develop the habit of unambiguous and consistent style and formatting w
 \end{Shaded}
 
 \begin{verbatim}
-R>  [1] -21.3659446   4.6646059  -5.2923774   0.3180709  -9.2697690   2.6566760
-R>  [7]  -0.7615035  19.5577185  22.0104464 -11.2243041
+R>  [1]  11.3559856   1.4398187 -20.7567644  -2.8172428 -14.4399367  -8.4246514
+R>  [7]  -0.3166477 -19.7374468  -6.8411501 -11.4653549
 \end{verbatim}
 
 Consult these resources for more about R code style :
@@ -957,10 +957,10 @@ R>   "0.8.3"   "0.3.5"   "1.2.2"
 \hypertarget{what-is-github}{%
 \section{What is GitHub?}\label{what-is-github}}
 
-GitHub is a code hosting platform for version control and collaboration. It lets you and others work together on projects from anywhere. The following teaches you the GitHub essentials like \textbf{Repositories}, \textbf{Branches}, \textbf{Commits}, and \textbf{Pull Requests}. You will first create your own account and repository, and learn GitHub's Pull and Push Request workflow, a popular way to create and review code.
+GitHub is a code hosting platform for version control and collaboration. It uses the software Git to let you and others work together on projects from anywhere. The following teaches you the GitHub essentials like \textbf{Repositories}, \textbf{Branches}, \textbf{Commits}, and \textbf{Pull Requests}. You will first create your own account and repository, and learn GitHub's Pull and Push Request workflow, a popular way to create and review code.
 
-\hypertarget{installing-github-on-windows}{%
-\section{Installing GitHub on Windows}\label{installing-github-on-windows}}
+\hypertarget{installing-git-on-windows}{%
+\section{Installing Git on Windows}\label{installing-git-on-windows}}
 
 By default, Git is installed on Linux and macOS computers as a command line option. However, Microsoft Windows does not include a Git command. To install GitHub on Windows open the Git website (\url{https://git-scm.com/}). Click the `Download' link to download Git. The download should automatically start. Once downloaded, start the installation from the browser or the download folder. In the `Select Components' window, leave all default options checked and check any other additional components you want installed. Click the `Install' button. Once completed, you can check the option to launch Git Bash if you want to open a Bash command line.
 
